# predicates

./: Makefile  README.md  bench.cpp  main.cpp  meson.build  predicates.hpp  pyproject.toml
.github/workflows/: test.yml
demo/: demo.ipynb  points.json
include/predicates/: predicates.hpp
src/: pypredicates.cpp
test/: bench.cpp  test_bindings.py  unittest.cpp
